最寄りまでのルート完成

--- a/LocalDisasterPreventionInformationApp/Pages/Top/TopPage.xaml
+++ b/LocalDisasterPreventionInformationApp/Pages/Top/TopPage.xaml
@@ -10,8 +10,7 @@
             <Grid>
                 <WebView x:Name="MapWebView"
                          Source="map.html" 
-                         Navigated="MapWebView_Navigated"
-                         Navigating="MapWebView_Navigating"/>
+                         Navigated="MapWebView_Navigated"/>
 
                 <!-- 通常時の操作パネル -->
                 <Border x:Name="RightPanel"
