--- a/LocalDisasterPreventionInformationApp/Pages/Base/BasePage.xaml
+++ b/LocalDisasterPreventionInformationApp/Pages/Base/BasePage.xaml
@@ -89,9 +89,9 @@
         </Grid>
 
         <!-- ページごとの中身 -->
-        <ContentPresenter x:Name="ContentArea"
-                          Grid.Row="1" 
-                          Content="{Binding Source={x:Reference BaseRoot}, Path=InnerContent}" />
+        <ContentView x:Name="ContentArea"
+             Grid.Row="1"
+             Content="{Binding Source={x:Reference BaseRoot}, Path=InnerContent}" />
 
         <!-- 共通フッター -->
         <Grid x:Name="FooterArea" Grid.Row="2" BackgroundColor="#F5F5F5" HeightRequest="80">
